--- a/TheGame/Info.plist
+++ b/TheGame/Info.plist
@@ -82,5 +82,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UserkeyOverride</key>
+	<string>UserKey3</string>
 </dict>
 </plist>
