Create User Callbacks

--- a/TheGame/Info.plist
+++ b/TheGame/Info.plist
@@ -83,11 +83,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UserkeyOverride</key>
-	<string>UserKey2</string>
+	<string></string>
 	<key>UsernameOverride</key>
 	<string>mikemayer67</string>
 	<key>AliasOverride</key>
-	<string></string>
+	<string>Mikey M</string>
 	<key>ServerHost</key>
 	<string>https://localhost/thegame</string>
 </dict>
