--- a/TheGame/Info.plist
+++ b/TheGame/Info.plist
@@ -30,9 +30,9 @@
 	<key>DevTiming</key>
 	<true/>
 	<key>DevUser</key>
-	<true/>
+	<false/>
 	<key>DevFreshStart</key>
-	<true/>
+	<false/>
 	<key>FacebookAppID</key>
 	<string>551988922072926</string>
 	<key>FacebookDisplayName</key>
